--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,12 @@
 .animate-slideDown {
   animation: slideDown 0.8s ease-out;
 }
+@layer utilities {
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+}
